--- a/GridTemplateAreas/index.html
+++ b/GridTemplateAreas/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <aside></aside>
-    <header></header>
-    <section></section>
-    <section></section>
-    <section></section>
-    <main></main>
-    <footer></footer>
+    <aside> Aside </aside>
+    <header> Header </header>
+    <section> Section 1 </section>
+    <section> Section 2 </section>
+    <section> Section 3 </section>
+    <main> Main </main>
+    <footer> Footer </footer>
 </body>
 </html>
