Added Scrollable Panels and Modal example

--- a/index.html
+++ b/index.html
@@ -14,96 +14,116 @@
 
       <div class="navigationContainer">
         <!--Projects-->
-        <ul>
-          <a href="AnimatedSVGCheckbox/index.html">
-            <li>
-              <div class="card">
-                <div class="content">
-                  <span> Animated S V G Checkbox </span>
-                </div>
-                <div class="bg-img">
-                  <img src="AnimatedSVGCheckbox/ReadmeData/example.gif" />
-                </div>
-              </div>
-            </li>
-          </a>
-          <a href="ClipPathTransitions/index.html">
-            <li>
-              <div class="card">
-                <div class="content">
-                  <span> Clip Path Transitions </span>
-                </div>
-                <div class="bg-img">
-                  <img src="ClipPathTransitions/ReadmeData/example.gif" />
-                </div>
-              </div>
-            </li>
-          </a>
-          <a href="CroppingImagesWithObjectFit/index.html">
-            <li>
-              <div class="card">
-                <div class="content">
-                  <span> Cropping Images With Object Fit </span>
-                </div>
-                <div class="bg-img">
-                  <img
-                    src="CroppingImagesWithObjectFit/ReadmeData/example.gif"
-                  />
-                </div>
-              </div>
-            </li>
-          </a>
-          <a href="DarkModeToggleSwitch/index.html">
-            <li>
-              <div class="card">
-                <div class="content">
-                  <span> Dark Mode Toggle Switch </span>
-                </div>
-                <div class="bg-img">
-                  <img src="DarkModeToggleSwitch/ReadmeData/example.gif" />
-                </div>
-              </div>
-            </li>
-          </a>
-          <a href="GridTemplateAreas/index.html">
-            <li>
-              <div class="card">
-                <div class="content">
-                  <span> Grid Template Areas </span>
-                </div>
-                <div class="bg-img">
-                  <img src="GridTemplateAreas/ReadmeData/example.gif" />
-                </div>
-              </div>
-            </li>
-          </a>
-          <a href="ResponsiveCSSGridNoMediaQueries/index.html">
-            <li>
-              <div class="card">
-                <div class="content">
-                  <span> Responsive C S S Grid No Media Queries </span>
-                </div>
-                <div class="bg-img">
-                  <img
-                    src="ResponsiveCSSGridNoMediaQueries/ReadmeData/example.gif"
-                  />
-                </div>
-              </div>
-            </li>
-          </a>
-          <a href="WebSiteExample/index.html">
-            <li>
-              <div class="card">
-                <div class="content">
-                  <span> Web Site Example </span>
-                </div>
-                <div class="bg-img">
-                  <img src="WebSiteExample/ReadmeData/example.gif" />
-                </div>
-              </div>
-            </li>
-          </a>
-        </ul>
+<ul>
+  <a href='AnimatedSVGCheckbox/index.html'>
+    <li>
+       <div class='card'>
+         <div class='content'>
+           <span> Animated S V G Checkbox </span>
+         </div>
+         <div class='bg-img'>
+           <img src='AnimatedSVGCheckbox/ReadmeData/example.gif' />
+         </div>
+       </div>
+    </li>
+  </a>
+  <a href='ClipPathTransitions/index.html'>
+    <li>
+       <div class='card'>
+         <div class='content'>
+           <span> Clip Path Transitions </span>
+         </div>
+         <div class='bg-img'>
+           <img src='ClipPathTransitions/ReadmeData/example.gif' />
+         </div>
+       </div>
+    </li>
+  </a>
+  <a href='CroppingImagesWithObjectFit/index.html'>
+    <li>
+       <div class='card'>
+         <div class='content'>
+           <span> Cropping Images With Object Fit </span>
+         </div>
+         <div class='bg-img'>
+           <img src='CroppingImagesWithObjectFit/ReadmeData/example.gif' />
+         </div>
+       </div>
+    </li>
+  </a>
+  <a href='DarkModeToggleSwitch/index.html'>
+    <li>
+       <div class='card'>
+         <div class='content'>
+           <span> Dark Mode Toggle Switch </span>
+         </div>
+         <div class='bg-img'>
+           <img src='DarkModeToggleSwitch/ReadmeData/example.gif' />
+         </div>
+       </div>
+    </li>
+  </a>
+  <a href='GridTemplateAreas/index.html'>
+    <li>
+       <div class='card'>
+         <div class='content'>
+           <span> Grid Template Areas </span>
+         </div>
+         <div class='bg-img'>
+           <img src='GridTemplateAreas/ReadmeData/example.gif' />
+         </div>
+       </div>
+    </li>
+  </a>
+  <a href='Modal/index.html'>
+    <li>
+       <div class='card'>
+         <div class='content'>
+           <span> Modal </span>
+         </div>
+         <div class='bg-img'>
+           <img src='Modal/ReadmeData/example.gif' />
+         </div>
+       </div>
+    </li>
+  </a>
+  <a href='ResponsiveCSSGridNoMediaQueries/index.html'>
+    <li>
+       <div class='card'>
+         <div class='content'>
+           <span> Responsive C S S Grid No Media Queries </span>
+         </div>
+         <div class='bg-img'>
+           <img src='ResponsiveCSSGridNoMediaQueries/ReadmeData/example.gif' />
+         </div>
+       </div>
+    </li>
+  </a>
+  <a href='ScrollablePanels/index.html'>
+    <li>
+       <div class='card'>
+         <div class='content'>
+           <span> Scrollable Panels </span>
+         </div>
+         <div class='bg-img'>
+           <img src='ScrollablePanels/ReadmeData/example.gif' />
+         </div>
+       </div>
+    </li>
+  </a>
+  <a href='WebSiteExample/index.html'>
+    <li>
+       <div class='card'>
+         <div class='content'>
+           <span> Web Site Example </span>
+         </div>
+         <div class='bg-img'>
+           <img src='WebSiteExample/ReadmeData/example.gif' />
+         </div>
+       </div>
+    </li>
+  </a>
+</ul>
         <!--!Projects-->
       </div>
     </div>
